# parallel_programming_homework1

./: CMakeLists.txt  task1.cpp  task10.cpp  task11.cpp  task13.cpp  task14.cpp  task15.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
mpi/task1_1/: task1_1.cpp
mpi/task1_2/: task1_2.cpp
mpi/task1_3/: task1_3.cpp
mpi/task1_4/: task1_4.cpp
mpi/task1_5/: task1_5.cpp
mpi/task2_1/: task2_1.cpp
mpi/task2_2/: task2_2.cpp
mpi/task2_3/: task2_3.cpp
mpi/task2_4/: task2_4.cpp
mpi/task2_5/: task2_5.cpp
mpi/task3_2/: task3_2.cpp
mpi/task3_3/: task3_3.cpp
mpi/task4_1/: task4_1.cpp
mpi/task4_2/: task4_2.cpp
